# agent_sandbox

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml  twins-ci.yml  twins-publish-images.yml
docs/agent-sandbox/: api.md  contract-gaps.md  contract-versioning.md  event-operation-contract.md  plugin-interface-v1.md  release-gate.md  safety-model.md
sdk/agent_sandbox_twins/: README.md  pyproject.toml
sdk/agent_sandbox_twins/src/agent_sandbox_twins/: __init__.py  _assertions.py  _drive_provider.py  _gmail_provider.py  _http.py  _reshape.py
sdk/agent_sandbox_twins/src/agent_sandbox_twins/resources/schema/assertions/: drive.filename_sequence_valid.params.schema.json  drive.no_file_under_path_prefix.params.schema.json  gmail.message_has_label.params.schema.json  gmail.op_count.params.schema.json
src/agent_sandbox/: __init__.py  _builtin_twins.py  action_handlers.py  adapter_sdk.py  adapters.py  assertion_handlers.py  assertions.py  cli.py  dsl.py  env.py  execution_registry.py  plugins.py  registry.py  runner.py  runtime.py  schema.py  target_sdk.py  telemetry.py  twin_provider.py  validation.py
src/agent_sandbox/resources/templates/: run.yaml.tpl  scenario.yaml.tpl
src/agent_sandbox/resources/v3/openapi/: adapter-runner.openapi.yaml
src/agent_sandbox/resources/v3/schema/: adapter-input.schema.json  adapter-output.schema.json  environment.schema.json  run.schema.json  scenario.schema.json  shared.schema.json
src/agent_sandbox/resources/v3/schema/actions/: noop.params.schema.json
src/agent_sandbox/resources/v3/schema/assertions/: drive.file_exists.params.schema.json  drive.filename_sequence_valid.params.schema.json  drive.has_hash.params.schema.json  drive.no_file_under_path_prefix.params.schema.json  drive.op_count.params.schema.json  gmail.message_has_label.params.schema.json  gmail.op_count.params.schema.json  trace.has_span.params.schema.json  trace.span_attr_equals.params.schema.json  workflow.event_sequence.params.schema.json  workflow.metric_equals.params.schema.json  workflow.session_state_has.params.schema.json  workflow.session_state_match.params.schema.json
src/agent_sandbox/resources/v3/schema/http_protocols/: agno-agentos-workflow.config.schema.json  generic-json.config.schema.json
tests/: test_adapter_contract_v1.py  test_adapter_sdk.py  test_labs_cli.py  test_target_sdk.py
tests/fixtures/adapter_sdk/: expected_completed_output.json  invalid_schema_adapter_input.json  valid_adapter_input.json
twins/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml  project.md
twins/apps/twin-cli/: Cargo.toml
twins/apps/twin-cli/src/: generate.rs  main.rs
twins/apps/twin-drive-server/: Cargo.toml
twins/apps/twin-drive-server/src/: main.rs
twins/apps/twin-gmail-server/: Cargo.toml
twins/apps/twin-gmail-server/src/: main.rs
twins/crates/twin-drive/: Cargo.toml
twins/crates/twin-drive/src/: generated.rs  lib.rs
twins/crates/twin-gmail/: Cargo.toml
twins/crates/twin-gmail/src/: generated.rs  lib.rs
twins/crates/twin-kernel/: Cargo.toml
twins/crates/twin-kernel/src/: lib.rs
twins/crates/twin-macros/: Cargo.toml
twins/crates/twin-macros/src/: lib.rs
twins/crates/twin-scenario/: Cargo.toml
twins/crates/twin-scenario/src/: lib.rs
twins/crates/twin-server-core/: Cargo.toml
twins/crates/twin-server-core/src/: lib.rs
twins/crates/twin-service/: Cargo.toml
twins/crates/twin-service/src/: lib.rs
twins/docker/: Dockerfile.drive  Dockerfile.gmail
twins/docs/plans/: 2026-02-24-drive-file-content.md  2026-02-24-gmail-twin.md  2026-02-24-lessons-learned-twin-2.md  2026-02-24-openapi-codegen.md  2026-02-24-reducing-twin-creation-effort.md
twins/examples/: agno_drive_reorganizer.py  agno_twin_drive_agent.py
twins/scenarios/: ci-determinism.v1.json  drive-basic.v0.json
twins/specs/: drive.toml  gmail.toml
twins/templates/docker/: Dockerfile.tmpl
twins/templates/twin-crate/: Cargo.toml.tmpl  lib.rs.tmpl
twins/templates/twin-server/: Cargo.toml.tmpl  main.rs.tmpl
twins/tests/sdk_smoke/: README.md  test_google_sdk.py
