[workspace]
members = [
  "crates/twin-kernel",
  "crates/twin-macros",
  "crates/twin-service",
  "crates/twin-drive",
  "crates/twin-scenario",
  "crates/twin-server-core",
  "apps/twin-drive-server",
  "apps/twin-cli",
  "crates/twin-gmail",
  "apps/twin-gmail-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
toml = "0.8"
serde_path_to_error = "0.1"
