[project]
name = "agent-sandbox-twins"
version = "0.1.0"
description = "Gmail and Drive twin providers for agent-sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Richard Gyiko" }]
dependencies = ["agent-sandbox>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sandbox_twins"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_sandbox_twins/resources" = "agent_sandbox_twins/resources"
