[package]
name = "twin-gmail"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
twin-kernel = { path = "../twin-kernel" }
twin-service = { path = "../twin-service" }

[dev-dependencies]
tokio.workspace = true
